# derum

./: LICENSE  README.md  setup.cfg
examples/: simple_scale.py
src/: derum.py  note_decoder.py  unison.py  utils.py
src/derum/: __init__.py  note_decoder.py
