[metadata]
name = derum
version = 0.0.1
author = Théo Degioanni
author_email = theo.degioanni@ens-rennes.fr
description = Differentiable electronic music synthesizer for use with TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Moxinilian/derum
project_urls =
    Bug Tracker = https://github.com/Moxinilian/derum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    ddsp

[options.packages.find]
where = src